# ffs-triumph

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ffs_triumph/: __init__.py  cli.py  client.py  config.py  document.py  pdf.py  render.py
tests/: test_client_retry.py  test_document.py  test_render.py
