[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffs-triumph"
dynamic = ["version"]
description = "FFS — Full-manual Fetcher & Stitcher: turn a Triumph service manual into an offline PDF"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jesse Erlbaum", email = "jesse@erlbaum.net" }]
keywords = ["triumph", "motorcycle", "service-manual", "pdf", "offline", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.49",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/jerlbaum/ffs-triumph"
Repository = "https://github.com/jerlbaum/ffs-triumph"
Issues = "https://github.com/jerlbaum/ffs-triumph/issues"

[project.scripts]
ffs = "ffs_triumph.cli:main"

[tool.hatch.version]
path = "src/ffs_triumph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ffs_triumph"]

[tool.ruff]
line-length = 100
target-version = "py310"
